# SwingTrading

./: .gitignore  BACKTESTING_README.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PAPER_TRADING_README.md  README.md  README_SCORING_V2.md  RESULTS_GUIDE.md  SCORING_EXPLAINED.md  UI_README.md  alpaca_live_server.py  cancel_orders.py  close_position.py  config.yaml  educational_server.py  example_backtest.py  fetch_real_prices.py  pyproject.toml  real_actionable_server.py  real_data_server.py  real_scan_server.py  real_server.py  requirements_backtest.txt  run_backtest.py  run_ui.py  scan_metadata.json  scan_results.csv  simple_server.py  sp500_backtest.py  sp500_tickers.txt  test_alpaca_connection.py  test_api_connection.py  test_paper_trading.py  test_ui.html  test_v2_quick.py  working_server.py  working_server_v2.py
api/: models.py  scanner_wrapper.py  server.py
backtesting/: __init__.py  backtest_engine.py  data_manager.py  optimization.py  performance_analyzer.py
broker/: __init__.py  alpaca_adapter.py  market_calendar.py
cli/: __init__.py  paper.py
reporting/: __init__.py  eod_report.py
scoring_v2/: __init__.py  cache.py  gates.py  indicators.py  market_regime.py  percentiles.py  scoring.py  telemetry.py
tests/: __init__.py  test_cache_manager.py  test_config.py  test_exceptions.py  test_integration.py  test_no_prints.py  test_rate_limiter.py
trading/: __init__.py  executor.py  paper_engine.py  position_manager.py  reconciliation.py
web/: api.js  app.js  app_fixed.js  educational.html  enhanced_ui.html  index.html  styles.css  (+2 more)
(+17 files in other folders)
